--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
     <title>Adriano Rospigliosi</title>
-    google-site-verification: google60abbda412db6d8f.html
+    google-site-verification: google60abbda412db6d8f.
 </head>
 <body>
     <header>
