--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
     <title>Adriano Rospigliosi</title>
+    google-site-verification=BnyYoC31n3i2nGdtbZu6Oy_QMKtAsL-M87GSVbS7JN4
 </head>
 <body>
     <header>
