--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Adriano Samir Rospigliosi Aguilar</title>
+    <title>Adriano Rospigliosi</title>
     <meta name="google-site-verification" content="NL5R0MLYKoFBCIFdwIFsz0KV1AAWJN3qtYGDa50QR7g" />
 </head>
 <body>
